--- a/index.html
+++ b/index.html
@@ -1,13 +1,56 @@
 <!Doctype html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="css/normalize.css">
+        <title>Photo Gallery</title>
         <link href="https://fonts.googleapis.com/css?family=Merriweather::400,700,800&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="UTF-8">
     </head>
     <body>
-
+        <div class="search-input">
+            <input type="search" id="search" name="search" placeholder="Seaerch...">
+        </div>
+        <div>
+            <img src="photos/thumbnails/01.jpg" alt="grass">
+        </div>
+        <div>
+            <img src="photos/thumbnails/02.jpg" alt="lake">
+        </div>
+        <div>
+            <img src="photos/thumbnails/03.jpg" alt="grass">
+        </div>
+        <div>
+            <img src="photos/thumbnails/04.jpg" alt="ice">
+        </div>
+        <div>
+            <img src="photos/thumbnails/05.jpg" alt="rock">
+        </div>
+        <div>
+            <img src="photos/thumbnails/06.jpg" alt="tree">
+        </div>
+        <div>
+            <img src="photos/thumbnails/07.jpg" alt="green grass">
+        </div>
+        <div>
+            <img src="photos/thumbnails/08.jpg" alt="sand">
+        </div>
+        <div>
+            <img src="photos/thumbnails/09.jpg" alt="lake">
+        </div>
+        <div>
+            <img src="photos/thumbnails/10.jpg" alt="road">
+        </div>
+        <div>
+            <img src="photos/thumbnails/11.jpg" alt="mountain">
+        </div>
+        <div>
+            <img src="photos/thumbnails/12.jpg" alt="grass">
+        </div>
     </body>
+    <script 
+        src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+        crossorigin="anonymous"
+    >
+    </script>
 </html>
