--- a/index.html
+++ b/index.html
@@ -11,40 +11,40 @@
         <div class="search-input">
             <input type="search" id="search" name="search" placeholder="Seaerch...">
         </div>
-        <div>
+        <div class="col-4">
             <img src="photos/thumbnails/01.jpg" alt="grass">
         </div>
-        <div>
+        <div class="col-4">
             <img src="photos/thumbnails/02.jpg" alt="lake">
         </div>
-        <div>
+        <div class="col-4">
             <img src="photos/thumbnails/03.jpg" alt="grass">
         </div>
-        <div>
+        <div class="search-input col-4">
             <img src="photos/thumbnails/04.jpg" alt="ice">
         </div>
-        <div>
+        <div class="search-input col-4">
             <img src="photos/thumbnails/05.jpg" alt="rock">
         </div>
-        <div>
+        <div class="search-input col-4">
             <img src="photos/thumbnails/06.jpg" alt="tree">
         </div>
-        <div>
+        <div class="search-input col-4">
             <img src="photos/thumbnails/07.jpg" alt="green grass">
         </div>
-        <div>
+        <div class="search-input col-4">
             <img src="photos/thumbnails/08.jpg" alt="sand">
         </div>
-        <div>
+        <div class="search-input col-4">
             <img src="photos/thumbnails/09.jpg" alt="lake">
         </div>
-        <div>
+        <div class="search-input col-4">
             <img src="photos/thumbnails/10.jpg" alt="road">
         </div>
-        <div>
+        <div class="search-input col-4">
             <img src="photos/thumbnails/11.jpg" alt="mountain">
         </div>
-        <div>
+        <div class="search-input col-4">
             <img src="photos/thumbnails/12.jpg" alt="grass">
         </div>
     </body>
