--- a/index.html
+++ b/index.html
@@ -11,71 +11,119 @@
     <body>
         <div class="row">
             <div class="col-12 search">
-                <input type="search" id="search" name="search" placeholder="Search...">
+                <input class="input" type="search" id="search" name="search" placeholder="Search...">
             </div>
         </div>
         <div class="row">
             <div class="col-3 img-avatar">
-                <a data-fancybox="gallery" href="photos/01.jpg">
+                <a 
+                    data-fancybox="gallery" 
+                    href="photos/01.jpg" 
+                    data-caption="Hay Bales I love hay bales. Took this snap on a drive through the countryside past some straw fields."
+                >
                     <img src="photos/thumbnails/01.jpg" alt="grass">
                 </a>
             </div>
             <div class="col-3 img-avatar">
-                <a data-fancybox="gallery" href="photos/02.jpg">
+                <a 
+                    data-fancybox="gallery" 
+                    href="photos/02.jpg"
+                    data-caption="Lake The lake was so calm today. We had a great view of the snow on the mountains from here."    
+                >
                     <img src="photos/thumbnails/02.jpg" alt="lake">
                 </a>
             </div>
             <div class="col-3 img-avatar">
-                <a data-fancybox="gallery" href="photos/03.jpg">
+                <a 
+                    data-fancybox="gallery" 
+                    href="photos/03.jpg"
+                    data-caption="Canyon I hiked to the top of the mountain and got this picture of the canyon and trees below."
+                >
                     <img src="photos/thumbnails/03.jpg" alt="grass">
                 </a>
             </div>
             <div class="col-3 img-avatar">
-                <a data-fancybox="gallery" href="photos/04.jpg">
+                <a 
+                    data-fancybox="gallery" 
+                    href="photos/04.jpg"
+                    data-caption="Iceberg It was amazing to see an iceberg up close, it was so cold but didn’t snow today. "
+                >
                     <img src="photos/thumbnails/04.jpg" alt="ice">
                 </a>
             </div>
         </div>
         <div class="row">
             <div class="col-3 img-avatar">
-                <a data-fancybox="gallery" href="photos/05.jpg">
+                <a 
+                    data-fancybox="gallery" 
+                    href="photos/05.jpg"
+                    data-caption="Desert The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons."
+                >
                     <img src="photos/thumbnails/05.jpg" alt="rock">
                 </a>
             </div>
             <div class="col-3 img-avatar">
-                <a data-fancybox="gallery" href="photos/06.jpg">
+                <a 
+                    data-fancybox="gallery" 
+                    href="photos/06.jpg"
+                    data-caption="Fall Fall is coming, I love when the leaves on the trees start to change color."    
+                >
                     <img src="photos/thumbnails/06.jpg" alt="tree">
                 </a>
             </div>
             <div class="col-3 img-avatar">
-                <a data-fancybox="gallery" href="photos/07.jpg">
+                <a 
+                    data-fancybox="gallery" 
+                    href="photos/07.jpg"
+                    data-caption="Plantation I drove past this plantation yesterday, everything is so green!"
+                >
                     <img src="photos/thumbnails/07.jpg" alt="tree">
                 </a>
             </div>
             <div class="col-3 img-avatar">
-                <a data-fancybox="gallery" href="photos/08.jpg">
+                <a 
+                    data-fancybox="gallery" 
+                    href="photos/08.jpg"
+                    data-caption="Dunes My summer vacation to the Oregon Coast. I love the sandy dunes!"
+                >
                     <img src="photos/thumbnails/08.jpg" alt="sand">
                 </a>
             </div>
         </div>
         <div class="row">
             <div class="col-3 img-avatar">
-                <a data-fancybox="gallery" href="photos/09.jpg">
+                <a 
+                    data-fancybox="gallery" 
+                    href="photos/09.jpg"
+                    data-caption="Countryside Lane We enjoyed a quiet stroll down this countryside lane. "
+                >
                     <img src="photos/thumbnails/09.jpg" alt="road">
                 </a>
             </div>
             <div class="col-3 img-avatar">
-                <a data-fancybox="gallery" href="photos/10.jpg">
+                <a 
+                    data-fancybox="gallery" 
+                    href="photos/10.jpg"
+                    data-caption="Sunset Sunset at the coast! The sky turned a lovely shade of orange."
+                >
                     <img src="photos/thumbnails/10.jpg" alt="mountain">
                 </a>
             </div>
             <div class="col-3 img-avatar">
-                <a data-fancybox="gallery" href="photos/11.jpg">
+                <a 
+                    data-fancybox="gallery" 
+                    href="photos/11.jpg"
+                    data-caption="Cave I did a tour of a cave today and the view of the landscape below was breathtaking."
+                >
                     <img src="photos/thumbnails/11.jpg" alt="mountain">
                 </a>
             </div>
             <div class="col-3 img-avatar">
-                <a data-fancybox="gallery" href="photos/12.jpg">
+                <a 
+                    data-fancybox="gallery" 
+                    href="photos/12.jpg"
+                    data-caption="Bluebells I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in."
+                >
                     <img src="photos/thumbnails/12.jpg" alt="mountain">
                 </a>
             </div>
@@ -87,4 +135,5 @@
     >
     </script>
     <script src="js/fancybox/dist/jquery.fancybox.min.js"></script>
+    <script src="js/search.js"></script>
 </html>
