add reponsive layout for search box

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="UTF-8">
     </head>
-    <body>
+    <body class="container">
         <div class="row">
             <div class="col-12 search">
                 <input class="input" type="search" id="search" name="search" placeholder="Search...">
