--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Photo Gallery</title>
         <link href="https://fonts.googleapis.com/css?family=Merriweather::400,700,800&display=swap" rel="stylesheet">
-        <link  href="js/fancybox-fork/" rel="stylesheet">
+        <link  href="js/fancybox-fork/dist/jquery.fancybox.min.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="UTF-8">
